--- a/main.css
+++ b/main.css
@@ -85,6 +85,8 @@ main article{
     max-width: 340px;
     text-align: justify;
     margin: 0;
+    vertical-align: top;
+    
 }
 main p{
     font-size: 1.2em;
@@ -104,13 +106,10 @@ footer p{
     color: white;
     font-size: 1.2em;
 }
-_inline-block{
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 10px;
-    text-align: left;
-    width: 200px;
+._inline-block{
+    display: inline-block
 }
+
 
 @media screen and (min-width: 768px) {
     main article{
